gitops/02-infra/platform-access/manifests/httproute-vmagent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmagent
  namespace: observability
  labels:
    app.kubernetes.io/name: vmagent
spec:
  hostnames:
    - vmagent.finops.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: edge
      namespace: edge
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vmagent-vm-local-victoria-metrics-k8s-stack
          port: 8429
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
